# mlinr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  mlinr.ebnf  version.txt
.tmp/: return.asm
examples/: attr.inr  malloc.inr  multi_return.inr  return.inr  stack_test.inr  sum.inr  test.inr  types.inr
include/: ast.h  bit128.h  gen.h  hextbl.h  io.h  lexer.h  parser.h  symtbl.h  token.h
include/arm/: arm.h
include/riscv/: riscv.h
include/x86/: arthlogic.h  instr.h  mem.h  register.h  stack.h  syscall.h  x86.h
src/: ast.c  gen.c  hextbl.c  io.c  lexer.c  main.c  parser.c  symtbl.c
src/arm/: arm.c
src/riscv/: riscv.c
src/x86/: arthlogic.c  instr.c  mem.c  stack.c  x86.c
src/x86/libs/: stdmem.asm
